# avr-pomodoro

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  csto.py  gen_font.py
font/sans-serif/: letters_8x16.c  letters_8x16.piskel  piskel_0_to_9_20x32.c
font/serif/: 0.c  1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
font/serif/piskel/: fill.c  font-0.piskel  font-1.piskel  font-2.piskel  font-3.piskel  font-4.piskel  font-5.piskel  font-6.piskel  font-7.piskel  font-8.piskel  font-9.piskel
inc/: button.h  font.h  fsm.h  hal.h  i2c.h  main.h  ssd1306.h  timers.h  ui.h
inc/ui/: font.h  timer.h  utils.h
lib/button/: button.c  button.h
lib/hal/: hal.h
lib/i2c/: i2c.c  i2c.h
lib/rotary_encoder/: rotary_encoder.c  rotary_encoder.h
lib/uart/: uart.c  uart.h
scripts/font/serif/: numbers_20x32.piskel
src/: button.c  font.c  font.h  fsm.c  fsm.h  gpio.c  gpio.h  i2c.c  i2c.h  main.c  main.h  ssd1306.c  ssd1306.h  timers.c  ui.c  ui.h
src/ui/: font.c  font.h  homepage.c  homepage.h  pages.c  pages.h  timer.c  utils.c  utils.h
tools/: gen_font.py
tools/font/7-segment/: number_20x32.c  numbers.piskel
tools/font/letters/: A_6x8.c  A_6x8.piskel  I_2x8.c  K_5x8.c  K_5x8.piskel  M_8x8.c  M_8x8.piskel  P_5x8.piskel  R_5x8.piskel  T_6x8.c  T_6x8.piskel  U_6x8.c  U_6x8.piskel  W_7x8.c  numbers_6x8.c  numbers_6x8.piskel  right_arrow.c  right_arrow.piskel  selectors_5x8.c  selectors_5x8.piskel
tools/font/letters/piskel/: E_5x8.piskel
tools/font/letters_16px/: letter_A_9x16.c  letter_D_9x16.c  letter_E_7x16.c  letter_F_7x16.c  letter_H_9x16.c  letter_I_3x16.c  letter_K_8x16.c  letter_N_10x16.c  letter_O_10x16.c  letter_P_8x16.c  letter_R_8x16.c  letter_S_8x16.c  letter_U_9x16.c  letter_W_15x16.c
tools/font/letters_16px/piskel/: letter_A_9x16.piskel  letter_D_9x16.piskel  letter_E_7x16.piskel  letter_F_7x16.piskel  letter_H_9x16.piskel  letter_I_3x16.piskel  letter_K_8x16.piskel  letter_N_10x16.piskel  letter_O_10x16.piskel  letter_P_8x16.piskel  letter_R_8x16.piskel  letter_S_8x16.piskel  letter_U_9x16.piskel  letter_W_15x16.piskel
tools/font/letters_8px/: E_5x8.c  O_6x8.c  P_5x8.c  R_5x8.c  S_6x8.c
tools/font/letters_8px/piskel/: I_2x8.piskel  O_6x8.piskel  S_6x8.piskel  W_7x8.piskel
tools/font/numbers_6x8/: number_0_6x8.c  number_1_6x8.c  number_6_6x8.c  number_9_6x8.c
tools/font/numbers_6x8/piskel/: number_0_6x8.piskel  number_2_6x8.piskel  number_6_6x8.piskel  (+1 more)
tools/font/numbers_8px/: number_2_6x8.c  number_3_6x8.c  number_4_6x8.c  number_5_6x8.c  number_7_6x8.c  number_8_6x8.c
tools/font/sans-serif/: letters_8x16.c  letters_8x16.piskel
tools/font/symbols/: right_arrow_9x8.c
tools/font/symbols_8px/: left_selector_5x8.c  right_selector_5x8.c
tools/font/test_frame/: homepage_arrows.c  homepage_arrows.piskel  work_finished.c  work_finished.piskel
tools/font/tests/: homepage_inverted.c  pause_finished.c
(+12 files in other folders)
